--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -5,11 +5,29 @@
     flex-direction: row;
 }
 
+
 .pageLink {
     background-color: rgb(83, 110, 170);
     margin: 20px 20px 20px 20px;
     padding: 20px 20px 20px 20px;
     width: 25%;
+    text-align: center;
+}
+
+@media (max-width: 800px) {
+    #links {
+        background-color: rgb(19, 56, 124);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .pageLink {
+        background-color: rgb(83, 110, 170);
+        margin: 20px 20px 20px 20px;
+        padding: 20px 20px 20px 20px;
+        width: 66%;
+        text-align: center;
+    }
 }
 
 .pageLink > a {
