--- a/project0/mystyle.scss
+++ b/project0/mystyle.scss
@@ -1,12 +1,30 @@
+$background_color_main: rgb(19, 56, 124);
+$component_background_color: rgb(83, 110, 170);
+
+.classic { 
+    background-color: rgb(253, 253, 253);
+}
+
+%table-shared {
+    border: 1px solid rgb(0, 0, 0);
+    padding: 10px;
+}
+
+.dataTable {
+    @extend %table-shared;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #links {
-    background-color: rgb(19, 56, 124);
+    background-color: $background_color_main;
     display: flex;
     flex-direction: row;
 }
 
 
 .pageLink {
-    background-color: rgb(83, 110, 170);
+    background-color: $component_background_color;
     margin: 20px 20px 20px 20px;
     padding: 20px 20px 20px 20px;
     width: 25%;
@@ -15,13 +33,13 @@
 
 @media (max-width: 1000px) {
     #links {
-        background-color: rgb(19, 56, 124);
+        background-color: $background_color_main;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
     .pageLink {
-        background-color: rgb(83, 110, 170);
+        background-color: $component_background_color;
         margin: 20px 20px 20px 20px;
         padding: 20px 20px 20px 20px;
         width: 80%;
@@ -29,21 +47,35 @@
     }
 }
 
-.pageLink > a {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+.pageLink {
+    a {
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
 }
 
 .mainHeader {
-    color: rgb(19, 56, 124);
+    color: $background_color_main;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
 #aboutMe {
-    background-color: rgb(83, 110, 170);
+    background-color: $component_background_color;
     margin: 20px 20px 20px 20px;
     padding: 20px 20px 20px 20px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.flash-card {
+    background-color: $component_background_color;
+    color: white;
+    align-self: center;
+    text-align: center;
+    width: 100%;
+    height: 200px;
+    margin: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
 }
