--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -2,9 +2,13 @@
   background-color: #fdfdfd;
 }
 
-.dataTable {
+.dataTable2 {
+  border-collapse: collapse;
   border: 1px solid black;
-  padding: 10px;
+  width: 20%;
+  margin-left: 40%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .dataTable {
@@ -16,6 +20,7 @@
   background-color: #13387c;
   display: flex;
   flex-direction: row;
+  margin-bottom: 20px;
 }
 
 .pageLink {
@@ -32,6 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
   }
 
   .pageLink {
@@ -59,6 +65,8 @@
   padding: 20px 20px 20px 20px;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  align-self: center;
+  text-align: center;
 }
 
 .flash-card {
@@ -70,6 +78,20 @@
   height: 200px;
   margin: 20px 20px 20px 20px;
   padding: 20px 20px 20px 20px;
+}
+
+p {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+ol {
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 /*# sourceMappingURL=mystyle.css.map */
