--- a/project0/mystyle.scss
+++ b/project0/mystyle.scss
@@ -99,6 +99,18 @@ p {
     margin-bottom: 20px;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
+.flashCardBack {
+    @extend .flash-card;
+    overflow: auto;
+    margin: 0px;
+    padding: 0px;
+    height: 150px; 
+}
+
 h2 {
     margin-top: 40px;
 }
