--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -110,4 +110,9 @@ ol {
   margin-right: 40%;
 }
 
+.project-list > ol {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 /*# sourceMappingURL=mystyle.css.map */
