--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -3,7 +3,78 @@
   padding: 10px;
 }
 
-#aboutMe {
+.header-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.mediaLink {
+  font-size: 1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-decoration: none;
+  color:blue;
+}
+
+.navLink {
+  font-size: 1.4rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-decoration: none;
+  color:rgb(51, 69, 85);
+}
+
+.middleHeaderContainers {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border-top: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.middleHeader {
+  width: 30%;
+  font-size: 5rem;
+  font-family:'Times New Roman', Times, serif;
+  color:#13387c;
+  font-weight: 700;
+  text-align:center;
+}
+
+
+.mediaHeader {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.mediaLinks {
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  width: 60%;
+}
+
+.navHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#aboutSite {
   background-color: #536eaa;
   margin: 20px 20px 20px 20px;
   padding: 20px 20px 20px 20px;
@@ -12,6 +83,89 @@
   align-self: center;
   text-align: center;
 }
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content-row {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content-item-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+}
+
+.content-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 30%;
+  width: 100%;
+}
+
+.content-body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 70%;
+  width: 100%;
+}
+
+@media (max-width: 767px){
+  .navLink {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .navHeader {
+    flex-direction: column;
+    align-content:center;
+  }
+  .content-row {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .content-item-container {
+    width: 80%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #links {
   background-color: #13387c;
