--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -97,7 +97,9 @@ nav {
   flex-direction: row;
   width: 80%;
   justify-content: space-between;
+  margin-bottom: 1em;
   align-items: center;
+  height: 400px;
 }
 
 .content-item-container {
@@ -105,25 +107,56 @@ nav {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 49%;
+  border: 1px solid rgb(62, 96, 148);
+  background-color: #0d1e3f;
+  color: white;
+  font-family:'Courier New', Courier, monospace;
 }
 
 .content-header {
+  font-size: 1.3rem;
+  font-weight: bold;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: baseline;
+  height: 75px;
+  width: 100%;
+  padding: 1em;
+}
+
+.content-header > div > i {
+  color: rgb(0, 255, 21);
+  font-size: 1.5rem;
+}
+
+.number-label{
+  font-size: 2rem;
+  font-weight: 2000;
+  color: rgb(247, 2, 2);
+  text-shadow: 3px 3px 7px #804f4f;
+}
+
+
+.content-body {
+  font-size: 1rem;
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  height: 30%;
+  justify-content: space-between;
+  height: 325px;
   width: 100%;
 }
 
-.content-body {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 70%;
+.content-body-item{
+  width: 49%;
+}
+
+.myImage {
   width: 100%;
+  border: 5px dotted #555;
 }
 
 @media (max-width: 767px){
@@ -139,9 +172,11 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    height: 830px;
+    width: 80%;
   }
   .content-item-container {
-    width: 80%;
+    width: 100%;
   }
 }
 
