--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -1,3 +1,4 @@
+
 .dataTable {
   border: 1px solid black;
   padding: 10px;
@@ -11,11 +12,21 @@
   flex-direction: column;
 }
 
+@keyframes welcomeAnimation {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+.mediaHeader > h2 {
+  color: #13387c;
+  animation: welcomeAnimation 3s infinite;
+}
+
 .mediaLink {
   font-size: 1.2rem;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: none;
-  color:blue;
+  color:#13387c;
 }
 
 .navLink {
@@ -74,10 +85,21 @@ nav {
   width: 100%;
 }
 
+@keyframes animated-border {
+  0% {
+    box-shadow: 0 0 0 0 rgba(67, 76, 100, 0.4);
+  }
+  100% {
+     box-shadow: 0 0 0 4px rgba(114, 108, 108, 0);
+  }
+}
+
 #aboutSite {
-  background-color: #536eaa;
+  animation: animated-border 1.5s infinite;
+  background-color: #0d1e3f;
   margin: 20px 20px 20px 20px;
   padding: 20px 20px 20px 20px;
+  border: 2px solid silver;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   align-self: center;
@@ -85,6 +107,7 @@ nav {
 }
 
 .content-container {
+  background-color:rgb(62, 96, 148);
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -159,7 +182,7 @@ nav {
   border: 5px dotted #555;
 }
 
-@media (max-width: 767px){
+@media (max-width: 960px){
   .navLink {
     font-size: 2.5rem;
     text-align: center;
