--- a/project0/mystyle.css
+++ b/project0/mystyle.css
@@ -126,6 +126,7 @@ nav {
 }
 
 .content-item-container {
+  border-radius: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
